fixed navbar visibility

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   }
 }
 
+.page-gutter {
+  @apply px-6 md:px-28 xl:px-80;
+}
+
 .bg {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
